--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e .env.local -- next dev",
-    "build": "next build --turbopack",
+    "with-env": "dotenv -e .env.local --",
+    "dev": "npm run with-env -- next dev",
+    "build": "npm run with-env next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "db:generate": "npm run with-env drizzle-kit generate --out ./drizzle",
+    "db:migrate": "npm run with-env drizzle-kit migrate",
+    "db:studio": "npm run with-env drizzle-kit studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -19,7 +23,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
-    "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.5",
     "imagekit": "^6.0.0",
     "lucide-react": "^0.543.0",
@@ -41,6 +44,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
