--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
-    "db:generate": "npm run with-env drizzle-kit generate --out ./drizzle",
+    "db:generate": "npm run with-env drizzle-kit generate",
     "db:migrate": "npm run with-env drizzle-kit migrate",
     "db:studio": "npm run with-env drizzle-kit studio"
   },
