--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "drizzle-orm": "^0.44.5",
     "imagekit": "^6.0.0",
     "lucide-react": "^0.543.0",
-    "next": "15.5.2",
+    "next": "^15.5.2",
     "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
