--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "imagekit": "^6.0.0",
+    "imagekitio-next": "^1.0.1",
     "lucide-react": "^0.543.0",
     "next": "^15.5.2",
     "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
