--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@hookform/resolvers": "^5.2.1",
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-table": "^8.21.3",
     "@uploadthing/react": "^7.3.3",
     "@upstash/qstash": "^2.8.3",
     "@upstash/ratelimit": "^2.0.6",
@@ -30,6 +32,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "imagekit": "^6.0.0",
@@ -38,6 +41,7 @@
     "next": "^15.5.2",
     "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.7.0",
     "react": "19.1.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.1.0",
