--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
