--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,12 @@
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noUnknownAtRules": "off"
+        "noUnknownAtRules": "off",
+        "noArrayIndexKey": "off",
+        "noDoubleEquals": "off"
+      },
+      "a11y":{
+        "useSemanticElements": "off"
       }
     },
     "domains": {
